--- a/Spark/Sources/Main Window/Base.lproj/SELibraryWindow.xib
+++ b/Spark/Sources/Main Window/Base.lproj/SELibraryWindow.xib
@@ -440,7 +440,7 @@
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     <clipView key="contentView" ambiguous="YES" id="rds-8E-tZJ">
                         <rect key="frame" x="1" y="0.0" width="152" height="463"/>
-                        <autoresizingMask key="autoresizingMask"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView focusRingType="none" verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" alternatingRowBackgroundColors="YES" columnReordering="NO" columnResizing="NO" multipleSelection="NO" emptySelection="NO" autosaveColumns="NO" rowSizeStyle="automatic" headerView="258" viewBased="YES" id="77" customClass="WBTableView">
                                 <rect key="frame" x="0.0" y="0.0" width="152" height="440"/>
