--- a/Spark/Spark/Main Window/Base.lproj/SELibraryWindow.xib
+++ b/Spark/Spark/Main Window/Base.lproj/SELibraryWindow.xib
@@ -280,7 +280,7 @@
                                                         </binding>
                                                     </connections>
                                                 </tableColumn>
-                                                <tableColumn identifier="description" editable="NO" width="195" minWidth="80" maxWidth="1000" id="114">
+                                                <tableColumn identifier="description" editable="NO" width="166" minWidth="80" maxWidth="1000" id="114">
                                                     <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" alignment="left" title="Description">
                                                         <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
                                                         <color key="backgroundColor" name="headerColor" catalog="System" colorSpace="catalog"/>
@@ -345,7 +345,7 @@
                                 <constraints>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="140" id="rmI-Ml-j9h"/>
                                 </constraints>
-                                <buttonCell key="cell" type="bevel" title="Start Spark Daemon" bezelStyle="regularSquare" image="SparkRun" imagePosition="left" alignment="left" inset="2" id="244">
+                                <buttonCell key="cell" type="bevel" title="Start Spark Daemon" bezelStyle="regularSquare" image="SparkRun" imagePosition="leading" alignment="left" inset="2" id="244">
                                     <behavior key="behavior" lightByContents="YES"/>
                                     <font key="font" metaFont="label"/>
                                 </buttonCell>
@@ -455,7 +455,7 @@
                                         </buttonCell>
                                         <prototypeCellViews>
                                             <tableCellView id="G5S-xM-jam">
-                                                <rect key="frame" x="1" y="1" width="21" height="17"/>
+                                                <rect key="frame" x="11" y="1" width="21" height="17"/>
                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                 <subviews>
                                                     <button translatesAutoresizingMaskIntoConstraints="NO" id="M9e-Zc-9bR">
@@ -494,7 +494,7 @@
                                             </binding>
                                         </connections>
                                     </tableColumn>
-                                    <tableColumn editable="NO" width="116" minWidth="8" maxWidth="1000" id="79">
+                                    <tableColumn editable="NO" width="87" minWidth="8" maxWidth="1000" id="79">
                                         <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" alignment="center" title="Front Application">
                                             <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
                                             <color key="backgroundColor" white="0.33333299" alpha="1" colorSpace="calibratedWhite"/>
@@ -507,11 +507,11 @@
                                         <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                                         <prototypeCellViews>
                                             <tableCellView id="dk2-Gf-49f">
-                                                <rect key="frame" x="25" y="1" width="120" height="17"/>
+                                                <rect key="frame" x="35" y="1" width="91" height="17"/>
                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                 <subviews>
                                                     <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="a33-pO-PxE">
-                                                        <rect key="frame" x="26" y="1" width="88" height="14"/>
+                                                        <rect key="frame" x="26" y="1" width="59" height="14"/>
                                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                                         <textFieldCell key="cell" controlSize="small" lineBreakMode="truncatingTail" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" title="Table View Cell" usesSingleLineMode="YES" id="hiR-HK-egb">
                                                             <font key="font" metaFont="smallSystem"/>
